renames and spacing fix

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -160,7 +160,7 @@ img {
         transition: 
             var(--transform),
             opacity 100ms linear;
-        transform: scale(1.4, 1.5) translateY(10%);
+        transform: scale(1.4, 1.5) translateY(15%);
     }
 
     .back {
